<resources>
    <string name="app_name">TimeCard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_current_projects">TimeCard</string>
    <string name="title_archived_projects">TimeCard (archived)</string>
    <string name="title_create_project">Create Project</string>
    <string name="title_edit_project">Edit %1$s</string>
    <string name="button_create">Create</string>
    <string name="dialog_get_extra_data_title">Add Extra Data</string>
    <string name="dialog_get_extra_data_positive_button">Add</string>
    <string name="dialog_update_extra_data_positive_button">Update</string>
    <string name="dialog_immutable_not_clocked_in">The project must be clocked in before changing the end date or time.</string>
    <string name="dialog_rename_project_title">Rename Project</string>
    <string name="dialog_rename_project_message">Choose a new name for your project</string>
    <string name="error_title">Error</string>
    <string name="error_project_exists">A project already exists named \'%1$s\'.</string>
    <string name="error_create">Error creating project \'%1$s\'</string>
    <string name="project_created">Project Created</string>
    <string name="project_clocked_in">Clocked In: %1$s</string>
    <string name="project_clocked_out">Clocked Out: %1$s</string>
    <string name="project_clocked_in_instant">Time Marked: %1$s</string>
    <string name="project_archived">Project \'%1$s\' archived</string>
    <string name="project_unarchived">Project \'%1$s\' un-archived</string>
    <string name="project_deleted">Project \'%1$s\' deleted!</string>
    <string name="undo">Undo</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="clock_in_instant">Mark Time</string>
    <string name="time_none">No time clocked yet!</string>
    <string name="time_years">%1$d years %2$d days %3$d hr %4$d min %5$d sec</string>
    <string name="time_days">%1$d days %2$d hr %3$d min %4$d sec</string>
    <string name="time_hours">%1$d hr %2$d min %3$d sec</string>
    <string name="time_minutes">%1$d min %2$d sec</string>
    <string name="time_seconds">%1$d sec</string>
    <string name="time_average">Avg: %1$s</string>
    <string name="average_extra_data_none">Avg: None</string>
    <string name="average_extra_data">Avg: %1$.2f</string>
    <string name="data_summary_unknown">Data Summary Unavailable</string>
    <string name="data_summary_count">Count: %1$d since %2$s</string>
    <string name="data_summary_frequency_and_next_occurrence">Frequency: %1$s\nProjected: %2$s</string>
    <string name="data_summary_simple_date_format">dd MMM yyyy</string>
    <string name="restore_confirm_title">Confirm Restore</string>
    <string name="restore_confirm_message">Restoring a backup database will overwrite the current database. Are you sure?</string>
    <string name="export">Export to CSV</string>
    <string name="notification_title_clock_out">%1$s</string>
    <string name="notification_text_clock_out">Click to clock out from %1$s</string>
    <string name="notification_text_mark_dismiss">Click to dismiss this notification</string>
    <string name="notification_sticky_clock_in_instructions">Use action buttons to Clock In or Dismiss</string>
    <string name="notification_sticky_clock_out_instructions">Use action buttons to Clock Out or Dismiss</string>
    <string name="notification_sticky_mark_time_instructions">Use action buttons to Mark Time or Dismiss</string>
    <string name="notification_sticky_marked_time_with_data">Marked time with extra data \'%1$s\' at %2$s</string>
    <string name="notification_sticky_marked_time">Marked time at %1$s</string>
    <string name="notification_sticky_clocked_in_with_data">Clocked in with extra data \'%1$s\' at %2$s</string>
    <string name="notification_sticky_clocked_in">Clocked in at %1$s</string>
    <string name="notification_sticky_clocked_out">Clocked out (%1$s) at %2$s</string>
    <string name="notification_extra_data">Extra Data</string>
    <string name="notification_extra_data_instruction">Enter extra data</string>
    <string name="notification_action_dismiss">Dismiss</string>
    <string name="notification_row_deleted">Deleted event</string>
    <string name="notification_project_renamed">Project renamed to \'%1$s\'</string>
    <string name="notification_channel_description_sticky">A persistent notification for the %1$s project in Time Card</string>
    <string name="notification_channel_description_default">A clock out notification for the %1$s project in Time Card</string>
    <string name="menu_title">Time Card</string>
    <string name="menu_current_projects">Current</string>
    <string name="menu_archived_projects">Archived</string>
    <string name="menu_mark_notification">Mark Notification</string>
    <string name="menu_edit_rows">Edit</string>
    <string name="menu_backup">Set Backup</string>
    <string name="menu_title_projects">Projects</string>
    <string name="menu_title_other">Other</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_rename_project">Rename</string>
    <string name="exported_error">Failed to export \'%1$s\'</string>
    <string name="exported_success">Exported \'%1$s\'</string>
    <string name="error_backup_title">Backup error: %1$s</string>
    <string name="error_backup_unable_to_open_target">unable to access backup file</string>
    <string name="error_restore_title">Restore error: %1$s</string>
    <string name="error_restore_message_backup_uri_empty">backup location does not exist yet</string>
    <string name="error_restore_database_locked">database is in use</string>
    <string name="error_restore_unable_to_open_source">unable to open restore file</string>
    <string name="error_restore_unable_to_open_target">unable to open local file</string>
    <string name="broadcast_clock_out">%1$s: \'%2$s\' clocked out</string>
    <string name="broadcast_clock_in">%1$s: \'%2$s\' clocked in</string>
    <string name="broadcast_clock_in_instant">%1$s: \'%2$s\' time marked</string>
    <string name="broadcast_error">%1$s: broadcast error</string>
    <string name="widget_config_instructions">Select a project to create a widget. Once created, click the widget to clock in/out.</string>
    <string name="widget_finish_config">Create Widget</string>
    <string name="widget_no_project_selected">You must select a project</string>
    <string name="setting_use_location_title">Attach Location</string>
    <string name="setting_use_location_description">When enabled, location data is added for the duration of when this project is clocked in</string>
    <string name="setting_no_duration_title">Instant</string>
    <string name="setting_no_duration_description">When enabled, project time-frames are instantaneous (start and end time are the same)</string>
    <string name="setting_use_extra_data_title">Extra Data</string>
    <string name="setting_use_extra_data_description">When enabled, extra data is added to each project time-frame</string>
    <string name="setting_default_extra_label">Default Extra Data:</string>
    <string name="header_start">Start</string>
    <string name="header_end">End</string>
    <string name="header_extra">Extra Data</string>
    <string name="header_start_date">Date</string>
    <string name="preferences_title">Settings</string>
    <string name="preferences_backup">Backup / Restore</string>
    <string name="preferences_title_backup">Backup</string>
    <string name="preferences_description_backup">Allow Timecard to backup your data</string>
    <string name="preferences_key_backup">backup</string>
    <string name="preferences_title_backup_uri">Backup Location</string>
    <string name="preferences_description_backup_uri">Select a backup location (local or remote)</string>
    <string name="preferences_description_backup_uri_set">Backup set: %1$s</string>
    <string name="preferences_key_backup_uri">backup_uri</string>
    <string name="preferences_title_restore">Restore Backup</string>
    <string name="preferences_description_restore">Restores projects from your Backup Location</string>
    <string name="preferences_key_restore">restore</string>
    <string name="preferences_title_restore_alt">Restore Alternate</string>
    <string name="preferences_description_restore_alt">Choose an alternate backup to restore</string>
    <string name="preferences_key_restore_alt">restore_alt</string>
    <string name="preferences_project_options">Options</string>
    <string name="preferences_project_instant_title">Instant</string>
    <string name="preferences_project_instant_description">When enabled, project time frames are instantaneous (start and end time are the same)</string>
    <string name="preferences_project_instant_key">instant</string>
    <string name="preferences_project_location_title">Track Location</string>
    <string name="preferences_project_location_description">When enabled, location data is added for the duration of when this project is clocked in</string>
    <string name="preferences_project_location_key">track_location</string>
    <string name="preferences_project_extra_data">Extra Data</string>
    <string name="preferences_project_extra_data_title">Use Extra Data</string>
    <string name="preferences_project_extra_data_description">When enabled, the default extra data is added to each project or user is prompted</string>
    <string name="preferences_project_extra_data_key">extra_data</string>
    <string name="preferences_project_extra_data_header_title">Export Column Name</string>
    <string name="preferences_project_extra_data_header_summary_default">Change the column name used when exporting (note: using a comma will allow inserting multiple columns)</string>
    <string name="preferences_project_extra_data_header_summary">Export column name: %1$s</string>
    <string name="preferences_project_extra_data_header_dialog_message">Add a column name to be used when exporting the data. Note: since the export format is CSV, using a comma separated title and comma separated extra data effectively adds additional columns of extra data</string>
    <string name="preferences_project_extra_data_header_key">extra_data_title</string>
    <string name="preferences_project_default_extra_title">Default Extra Data</string>
    <string name="preferences_project_default_extra_description">Click to add default extra data</string>
    <string name="preferences_project_default_extra_set_description">%1$s</string>
    <string name="preferences_project_default_extra_key">default_extra_data</string>
    <string name="preferences_project_default_extra_dialog_title">Default Extra Data</string>
    <string name="preferences_project_default_extra_dialog_message">Enter default extra data to be applied to this project.</string>
    <string name="preferences_project_summary_title">Summary Method</string>
    <string name="preferences_project_summary_description">Data summarized by: %1$s</string>
    <string name="preferences_project_summary_key">summarize_method</string>
    <string name="preferences_summary_type_default_value">@string/preferences_summary_type_auto</string>
    <string name="preferences_project_notification_options">Notifications</string>
    <string name="preferences_project_suppress_notification_title">Suppress Clock Out</string>
    <string name="preferences_project_suppress_notification_summary">When selected, a clock out notification will not be shown when a project is clocked in</string>
    <string name="preferences_project_suppress_notification_key">suppress_notification</string>
</resources>