<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preferences_project_options">

        <SwitchPreference
            android:key="@string/preferences_project_instant_key"
            android:title="@string/preferences_project_instant_title"
            android:summary="@string/preferences_project_instant_description"
            android:defaultValue="false" />

        <SwitchPreference
            android:enabled="false"
            android:key="@string/preferences_project_location_key"
            android:title="@string/preferences_project_location_title"
            android:summary="@string/preferences_project_location_description"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_project_extra_data">

        <SwitchPreference
            android:key="@string/preferences_project_extra_data_key"
            android:title="@string/preferences_project_extra_data_title"
            android:summary="@string/preferences_project_extra_data_description"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="@string/preferences_project_extra_data_header_key"
            android:title="@string/preferences_project_extra_data_header_title"
            android:summary="@string/preferences_project_extra_data_header_summary_default"
            android:dialogTitle="@string/preferences_project_extra_data_header_title"
            android:dialogMessage="@string/preferences_project_extra_data_header_dialog_message" />

        <EditTextPreference
            android:key="@string/preferences_project_default_extra_key"
            android:title="@string/preferences_project_default_extra_title"
            android:summary="@string/preferences_project_default_extra_description"
            android:dialogTitle="@string/preferences_project_default_extra_dialog_title"
            android:dialogMessage="@string/preferences_project_default_extra_dialog_message" />

        <ListPreference
            android:key="@string/preferences_project_summary_key"
            android:title="@string/preferences_project_summary_title"
            android:summary="@string/preferences_project_summary_description"
            android:entries="@array/preferences_summary_types"
            android:entryValues="@array/preferences_summary_type_values"
            android:defaultValue="@string/preferences_summary_type_default_value"/>

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_project_notification_options">

        <SwitchPreference
            android:key="@string/preferences_project_suppress_notification_key"
            android:title="@string/preferences_project_suppress_notification_title"
            android:summary="@string/preferences_project_suppress_notification_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>