<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/widget_margin"
    android:layout_marginLeft="@dimen/widget_margin"
    android:layout_marginRight="@dimen/widget_margin"
    app:cardCornerRadius="@dimen/card_radius" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/widget_padding" >
        
        <android.support.constraint.Guideline
            android:id="@+id/guide_col_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".33"/>

        <android.support.constraint.Guideline
            android:id="@+id/guide_col_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".66" />

        <TextView
            android:id="@+id/header_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/widget_padding_small"
            android:text="@string/header_start"
            android:textSize="@dimen/edit_cell_text_size"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/guide_col_1" />

        <TextView
            android:id="@+id/header_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/widget_padding_small"
            android:text="@string/header_end"
            android:textSize="@dimen/edit_cell_text_size"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/guide_col_1"
            app:layout_constraintTop_toBottomOf="@+id/header_start" />

        <TextView
            android:id="@+id/header_extra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/widget_padding_small"
            android:text="@string/header_extra"
            android:textSize="@dimen/edit_cell_text_size"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/guide_col_1"
            app:layout_constraintTop_toBottomOf="@+id/header_end" />

        <TextView
            android:id="@+id/start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_cell_text_size"
            android:textAlignment="center"
            android:maxLines="1"
            android:padding="@dimen/widget_padding_small"
            app:layout_constraintLeft_toLeftOf="@+id/guide_col_1"
            app:layout_constraintRight_toRightOf="@+id/guide_col_2"
            app:layout_constraintBaseline_toBaselineOf="@+id/header_start" />

        <TextView
            android:id="@+id/start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_cell_text_size"
            android:textAlignment="center"
            android:maxLines="1"
            android:padding="@dimen/widget_padding_small"
            app:layout_constraintLeft_toLeftOf="@+id/guide_col_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/header_start" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_cell_text_size"
            android:textAlignment="center"
            android:maxLines="1"
            android:padding="@dimen/widget_padding_small"
            app:layout_constraintLeft_toLeftOf="@+id/guide_col_1"
            app:layout_constraintRight_toRightOf="@+id/guide_col_2"
            app:layout_constraintTop_toBottomOf="@+id/start_date"
            app:layout_constraintBaseline_toBaselineOf="@+id/header_end" />

        <TextView
            android:id="@+id/end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_cell_text_size"
            android:textAlignment="center"
            android:maxLines="1"
            android:padding="@dimen/widget_padding_small"
            app:layout_constraintLeft_toLeftOf="@+id/guide_col_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_time"
            app:layout_constraintBaseline_toBaselineOf="@+id/header_end" />

        <TextView
            android:id="@+id/extra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_cell_text_size"
            android:textAlignment="viewStart"
            android:maxLines="1"
            android:padding="@dimen/widget_padding_small"
            app:layout_constraintLeft_toLeftOf="@+id/guide_col_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_date"
            app:layout_constraintBaseline_toBaselineOf="@+id/header_extra" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>